Update gitignore for cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 __pycache__/automateM248.cpython-38.pyc
 notebooks/M248/__pycache__/query.cpython-38.pyc
+notebooks/M248/__pycache__/query.cpython-38.pyc
+notebooks/M248/__pycache__/probability.cpython-38.pyc
