--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ notebooks/M248/__pycache__/query.cpython-38.pyc
 notebooks/M248/__pycache__/query.cpython-38.pyc
 notebooks/M248/__pycache__/probability.cpython-38.pyc
 AUTOM238.code-workspace
+*.pyc
