--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ AUTOM238.code-workspace
 AUTOM248.code-workspace
 Examples/.ipynb_checkpoints/*.ipynb
 dev/.ipynb_checkpoints/*.ipynb
+comp_book/.ipynb_checkpoints/*.ipynb
