--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 AUTOM238.code-workspace
 *.pyc
-AUTOM248.code-workspace
 Examples/.ipynb_checkpoints/*.ipynb
 dev/.ipynb_checkpoints/*.ipynb
 comp_book/.ipynb_checkpoints/*.ipynb
 .Rproj.user
+docs/site/*
