--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ Examples/.ipynb_checkpoints/*.ipynb
 dev/.ipynb_checkpoints/*.ipynb
 comp_book/.ipynb_checkpoints/*.ipynb
 .Rproj.user
-docs/site/*
+site/*
