--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ Examples/.ipynb_checkpoints/*.ipynb
 dev/.ipynb_checkpoints/*.ipynb
 comp_book/.ipynb_checkpoints/*.ipynb
 nb/py/.ipynb_checkpoints/*.ipynb
+nb/r/.ipynb_checkpoints/*.ipynb
 .Rproj.user
 site/*
 python/.ipynb_checkpoints/*.py
+r/.ipynb_checkpoints/*.r
