--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 AUTOM248.code-workspace
 *.pyc
-Examples/.ipynb_checkpoints/*.ipynb
-dev/.ipynb_checkpoints/*.ipynb
-comp_book/.ipynb_checkpoints/*.ipynb
-nb/py/.ipynb_checkpoints/*.ipynb
-nb/r/.ipynb_checkpoints/*.ipynb
 .Rproj.user
 site/*
-python/.ipynb_checkpoints/*.py
-r/.ipynb_checkpoints/*.r
+_archive/
+
+*/.ipynb_checkpoints/
+python/.ipynb_checkpoints/
+r/.ipynb_checkpoints/
+
+comp_book/.ipynb_checkpoints/
+nb/py/.ipynb_checkpoints/
+nb/r/.ipynb_checkpoints/
+projects/prem_league/notebooks/.ipynb_checkpoints/
