--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ r/.ipynb_checkpoints/
 comp_book/util/.ipynb_checkpoints/
 comp_book/.ipynb_checkpoints/
 projects/prem_league/notebooks/.ipynb_checkpoints/
+projects/prem_league/src/.ipynb_checkpoints/*.py
 =======
 python/.ipynb_checkpoints/*.py
 r/.ipynb_checkpoints/*.r
